@@ -37,6 +37,10 @@ Write output in SYNTAX (`turtle' or `ntriples').
 Add PREFIX to blank node IDs.
 
 .TP
+\fB\-r ROOT_URI\fR
+Keep relative URIs within ROOT_URI.
+
+.TP
 \fB\-s INPUT\fR
 Parse INPUT as a string (terminates options).
 
