@@ -1,0 +1,6 @@
+<http://www.w3.org/2001/sw/DataAccess/df1/tests/a/b/c> <http://www.w3.org/1999/02/22-rdf-syntax-ns#type> <http://example.org/Thing> .
+<http://www.w3.org/2001/sw/DataAccess/df1> <http://www.w3.org/1999/02/22-rdf-syntax-ns#type> <http://example.org/Thing> .
+<http://www.w3.org/2001/sw/DataAccess/df1/tests/test-rel.ttl> <http://www.w3.org/1999/02/22-rdf-syntax-ns#type> <http://example.org/Thing> .
+<http://www.w3.org/2001/sw/DataAccess/df1/tests/test-not.ttl> <http://www.w3.org/1999/02/22-rdf-syntax-ns#type> <http://example.org/Thing> .
+<http://www.w3.org/2001/sw/DataAccess/df1/tests/a/b/c> <http://www.w3.org/1999/02/22-rdf-syntax-ns#type> <http://example.org/Thing> .
+<http://www.w3.org/> <http://www.w3.org/1999/02/22-rdf-syntax-ns#type> <http://example.org/Thing> .
